--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # Rating
   rate: ^0.0.1
   flutter_launcher_icons: ^0.14.4
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
