--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # UI & Animations
   cupertino_icons: ^1.0.2
   lottie: ^3.3.2
@@ -18,7 +21,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   readmore: ^3.0.0
   curved_navigation_bar: ^1.0.3
-
+  flutter_dotenv: ^6.0.0
+  youtube_player_iframe: ^5.2.2
+  webview_flutter: ^4.8.0
   # State Management & Storage
   get: ^4.6.7
   get_storage: ^2.1.1
@@ -68,3 +73,4 @@ flutter:
   assets:
   - assets/images/
   - assets/animations/
+  - .env
